Celgene-Deployment-Replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spectra-celgene
  labels:
    app: spectra-celgene
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spectra-celgene
  template:
    metadata:
      labels:
        app: spectra-celgene
    spec:
      containers:
      - name: spectra-celgene
        image: relevancelabbigdata/spectra-celgene        
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: spectra-celgene
  annotations:
    cloud.google.com/load-balancer-type: "External"
  labels:
    app: spectra-celgene
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
    name: http
  selector:
    app: spectra-celgene
